delete functionality and specs fixed
